# spatiality_v2

./: .env.example  .gitignore  DESIGN_DECISIONS.md  LICENSE  PIPELINE.md  README.md  TODO.md  modal_inference.py  modal_segmentation.py
backend/: main.py  pyproject.toml  requirements-local-gpu.txt
backend/modal/: inference.py  segmentation.py
backend/src/spatiality/inference/: __init__.py  flashvggt.py  frame_select.py  run.py
backend/src/spatiality/nav/: capture_map.py  freespace.py
backend/src/spatiality/segmentation/: __init__.py  _track_types.py  gdino.py  lane_b.py  lane_c.py  lane_e.py  lane_f.py  lift.py  mask.py  postprocess.py  reid.py  render.py  run.py  sam3.py  scene_scout.py  vlm.py
docs/: DESIGN_DECISIONS.md  DESIGN_NOTES.md  PIPELINE.md  future_work_langsplat.md  research_world_points.md
docs/sample_scene/: README.md
patches/: flashvggt_minimal.patch  flashvggt_pr.md  flashvggt_pyproject.toml
scripts/: build_demo_scene.py  demo.sh  install_local_gpu.sh  run_local_gpu.py  run_pipeline_cli.py  run_scene.sh  run_segmentation_cli.py
web/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/components/: AnnotationEvidencePanel.tsx  AnnotationOverlay.tsx  CalibrateModal.tsx  CaptureMapCard.tsx  ChatPanel.tsx  DemoPattern.tsx  FreespaceCard.tsx  Header.tsx  LaneSwitcher.tsx  PipelineOverview.tsx  PipelineProgress.tsx  PointCloudViewer.tsx  SettingsPanel.tsx  SidePanel.tsx  SpanWaterfall.tsx  SplatViewer.tsx  StageDrawer.tsx  (+4 more)
(+13 files in other folders)
